support sending emails (#19)
* support sending emails

* small code improvements